Bug 1760365 - Provide filename and extention to embedded image if none in header. r=mkmelin

--HG--
extra : amend_source : b352c3c637ef061229c390e810b95ed9810ffd90